Tue Mar 29 19:33:54 2016  NARUSE, Yui  <naruse@ruby-lang.org>

	* addr2line.c: define toupper for its use. fix r54391.

Tue Mar 29 19:23:46 2016  NARUSE, Yui  <naruse@ruby-lang.org>

	* include/ruby/ruby.h (rb_isupper, rb_islower, rb_isalpha, rb_isdigit,
	  rb_isalnum, rb_isxdigit, rb_isblank, rb_isspace, rb_isblank,
	  rb_iscntrl, rb_isprint, rb_ispunct, rb_isgraph,
	  rb_tolower, rb_toupper): use inline function to avoid function call.

	* include/ruby/ruby.h (rb_isascii): use inline function to clarify
	  the logic.

Tue Mar 29 18:56:55 2016  NARUSE, Yui  <naruse@ruby-lang.org>

	* tool/redmine-backporter.rb (backport): show merger.rb's path.

	* tool/redmine-backporter.rb (show): show current issue again if no
	  ticket number is given.

	* tool/redmine-backporter.rb (rel): show error message if current
	  bugs.ruby-lang.org doesn't support the API.

Tue Mar 29 18:54:34 2016  NARUSE, Yui  <naruse@ruby-lang.org>

	* tool/merger.rb: support to backport header as backport identifier.
	  Now you can specify by 'merge revision(s) 49254: [Backport #10738]'.

Tue Mar 29 16:53:44 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* enc/unicode/case-folding.rb, casefold.h: Tweaked handling of 6
	  special cases in CaseUnfold_11_Table.

	* enc/unicode.c: Adjustments for above.

	* test/ruby/enc/test_case_mapping.rb: Tests for the above: Some tests in
	  test_titlecase activated; test_greek added. A test in test_cherokee fixed.

Tue Mar 29 13:31:00 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* enc/unicode.c: Cleaned up some comments.

Tue Mar 29 13:24:56 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* enc/unicode/case-folding.rb, casefold.h: Removing data for idempotent
	  titlecasing.

	* enc/unicode.c: Adjust code to data removal.

Tue Mar 29 12:45:18 2016  Laurent Arnoud  <laurent@spkdev.net>

	* lib/webrick/httpresponse.rb: Move error_body to method. It allow to
	  override the body more easily. [fix GH-1307]
	* test/webrick/test_httpresponse.rb: ditto.
